--- a/src/main/resources/templates/photos/edit.html
+++ b/src/main/resources/templates/photos/edit.html
@@ -7,8 +7,8 @@
       <h1 class="my-5" th:text="${isEdit ? 'Modifica foto' : 'Nuova foto'}"></h1>
       <form method="post"
             enctype="multipart/form-data"
-            th:action="${isEdit ? '/photos/edit/'+ pizza.id : '/photos/create'}"
             th:object="${photo}"
+            th:action="${isEdit ? '/photos/edit/'+ photo.id : '/photos/create'}"
             id="photo-form"
             class="row">
         <div class="col-6">
@@ -20,6 +20,8 @@
               <li th:each="err : ${#fields.errors('title')}" th:text="${err}"></li>
             </ul>
           </div>
+        </div>
+        <div class="col-6">
           <label class="form-label" for="photo-desc">Descrizione</label>
           <input class="form-control" type="text" id="photo-desc" th:field="*{description}">
           <div th:if="${#fields.hasErrors('description')}" class="invalid-feedback">
@@ -29,23 +31,30 @@
           </div>
         </div>
         <div class="col-6">
-          <label class="form-label" for="photo-url">Titolo foto</label>
-          <input class="form-control" type="text" id="photo-url" th:field="*{url}"
-                 th:errorClass="is-invalid">
-          <div th:if="${#fields.hasErrors('url')}" class="invalid-feedback">
-            <ul>
-              <li th:each="err : ${#fields.errors('url')}" th:text="${err}"></li>
-            </ul>
-          </div>
           <label class="form-label" for="photo-visible">Visibile</label>
           <select class="form-select" id="photo-visible" th:field="*{visible}" th:errorClass="is-invalid">
-            <option value="true" th:selected="${photo.visible}">Sì</option>
-            <option value="false" th:selected="${!photo.visible}">No</option>
+            <option value="1" th:selected="${photo.visible}">Pubblicata</option>
+            <option value="0" th:selected="${!photo.visible}">Non pubblicata</option>
           </select>
           <div th:if="${#fields.hasErrors('visible')}" class="invalid-feedback">
             <ul>
               <li th:each="err : ${#fields.errors('visible')}" th:text="${err}"></li>
             </ul>
+          </div>
+        </div>
+        <div class="col-6 ">
+        <!-- campo di aggiunta file -->
+          <label for="imageFile" class="form-label">Immagine</label>
+          <div class="d-flex align-items-start">
+          <input class="form-control me-2" type="file" id="imageFile" th:field="*{imageFile}">
+          <div th:if="${#fields.hasErrors('imageFile')}" class="invalid-feedback">
+            <ul>
+              <li th:each="err : ${#fields.errors('imageFile')}" th:text="${err}"></li>
+            </ul>
+          </div>
+          <div>
+            <img width="200" th:src="@{|/files/image/*{id}|}" alt="Immagine non presente">
+          </div>
           </div>
         </div>
         <h3>Categorie</h3>
@@ -56,6 +65,10 @@
             <label class="form-check-label me-3" th:for="|cat_${cat.id}|" th:text="${cat.name}">
             </label>
           </div>
+        </div>
+        <div class="col-12 d-flex justify-content-center my-4">
+          <button class="btn btn-success me-3" type="submit">Salva</button>
+          <a th:href="@{/photos}"><button class="btn btn-secondary" type="button">Cancel</button></a>
         </div>
       </form>
     </div>
