--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -5,7 +5,7 @@
   <body>
     <div class="container">
       <nav th:replace="~{/fragments/navbar :: navbar(current='Foto')}"></nav>
-      <h1>Lista Foto</h1>
+      <h1 class="my-4">Lista Foto</h1>
       
 <!--  alert di modifica o creazione foto-->
       <div th:if="${message != null}" class="alert alert-dismissible fade show"
@@ -15,20 +15,24 @@
       </div>
       
 <!--  form di ricerca      -->
-<!--      <div class="d-flex justify-content-between align-items-center">-->
-<!--        <form th:action="@{photos}" method="GET" class="d-flex justify-content-end" >-->
-<!--          <div class="input-group mb-3">-->
-<!--            <input type="search" class="form-control " th:value="${searchString}" placeholder="Cerca per nome" name="keyword">-->
-<!--            <button class="btn btn-outline-primary" type="submit">Cerca</button>-->
-<!--          </div>-->
-<!--        </form>-->
-<!--      </div>-->
+     <div class="d-flex justify-content-between align-items-center">
+       <form th:action="@{photos}" method="GET" class="d-flex justify-content-end" >
+         <div class="input-group mb-3">
+           <input type="search" class="form-control " th:value="${searchString}" placeholder="Cerca per titolo"
+                  name="keyword">
+           <button class="btn btn-outline-primary" type="submit">Cerca</button>
+         </div>
+       </form>
+       <a class="btn btn-primary"  th:href="@{/photos/create}">Aggiungi nuova foto</a>
+       
+     </div>
 
 <!--  lista foto -->
       <div class="row my-4" th:if="${photos.size() != 0}">
         <div class="col-3" th:each="p : ${photos}">
-          <div class="card">
-            <img class="img-fluid card-img-top" th:src="${p.url}" alt="immagine non disponibile">
+          <div class="card h-100">
+            <!-- <img class="img-fluid card-img-top" th:src="${p.url}" alt="immagine non disponibile"> -->
+            <img class="img-fluid card-img-top" th:src="@{|/files/image/${p.id}|}" alt="Immagine" src="">
             <div class="card-body p-2">
               <h3 class="mb-0" th:text="${p.title}"></h3>
             </div>
@@ -36,16 +40,16 @@
             
 <!--        sezione button di dettagli, modifica, cancellazione foto -->
             <div class="card-body p-2 d-flex align-items-center">
-              <a class="btn btn-primary px-2 py-1 me-1" >
-<!--                 th:href="|/pizza/${p.getId()}|">-->
+              <a class="btn btn-primary px-2 py-1 me-1"
+                th:href="|/photos/${p.getId()}|">
                 <i class="fa-solid fa-image"></i>
               </a>
-              <a class="btn btn-warning px-2 py-1 me-1">
-<!--                 th:href="|/pizza/edit/${p.getId()}|"-->
+              <a class="btn btn-warning px-2 py-1 me-1"
+                th:href="|/photos/edit/${p.getId()}|">
                 <i class="fa-solid fa-pen-to-square"></i>
               </a>
-              <form method="post" >
-<!--                    th:action="@{|/pizza/delete/${p.getId()}|}">-->
+              <form method="post"
+                   th:action="@{|/photos/delete/${p.getId()}|}">
                 <button class="btn btn-danger px-2 py-1" type="submit"><i class="fa-solid fa-trash-can"></i></button>
               </form>
             </div>
