add fontend search + logo

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -3,8 +3,8 @@
   <head>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md" th:fragment="navbar(current)">
-        <a class="navbar-brand" th:href="@{/}">Photo Album</a>
+    <nav class="navbar  navbar-expand-md" th:fragment="navbar(current)">
+        <a class="navbar-brand" th:href="@{/}"><img style="width: 50px;" th:src="@{/Logo.png}"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
