--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -6,7 +6,7 @@
     <div class="container">
       <nav th:replace="~{/fragments/navbar :: navbar(current='Foto')}"></nav>
       <h1 class="my-4">Lista Foto</h1>
-      
+      <p th:text="${username}"></p>
 <!--  alert di modifica o creazione foto-->
       <div th:if="${message != null}" class="alert alert-dismissible fade show"
            th:classAppend="${#strings.equalsIgnoreCase(message.type, 'SUCCESS')} ? 'alert-success' : 'alert-danger'">
